--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,13 @@ Changelog
 =========
 
 
+0.2dev (08 feb 2018)
+————————————————————	
+
+- reload mathjax in preview window [espenmn]
+- this will give js error if you dont have mathjax, so we probably need a better approach 
+
+
 0.1dev (22 june 2017)
 ————————————————————	
 
