--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,7 @@ Changelog
 0.2dev (08 feb 2018)
 ————————————————————	
 
+- scroll to cursor in preview window when hitting enter
 - reload mathjax in preview window [espenmn]
 - this will give js error if you dont have mathjax, so we probably need a better approach 
 
