--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,11 @@ Changelog
 =========
 
 
+0.2.1 (08 feb 2018)
+————————————————————	
+
+- scroll a bit more down, since Safari did not scroll properly
+
 0.2dev (08 feb 2018)
 ————————————————————	
 
