--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,10 +2,17 @@ Changelog
 =========
 
 
+0.2.2 (9 feb 2018)
+————————————————————	
+
+- CSS
+
+
 0.2.1 (08 feb 2018)
 ————————————————————	
 
 - scroll a bit more down, since Safari did not scroll properly
+
 
 0.2dev (08 feb 2018)
 ————————————————————	
